objects/Laser_Case__c.object
<CustomObject>
    <description>Used by Laser group to log cases for clients</description>
    <fields>
        <fullName>Case_Reason_Code_Type__c</fullName>
        <label>Case Reason Code Type</label>
        <picklist>
            <controllingField>Case_Reason_Code__c</controllingField>
            <picklistValues>
                <fullName>Additional Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back-bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buy/Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer ADP/Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSA Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarbanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unix Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage Pack</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Code__c</fullName>
        <label>Case Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Collector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case #</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Before_Tax__c</fullName>
        <label>Credit Amount (Before Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Number__c</fullName>
        <label>Credit Memo Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Laser_Billing_Info__c</fullName>
        <label>Laser Billing Info</label>
        <referenceTo>Laser_Billing_Info__c</referenceTo>
        <relationshipLabel>Laser Cases</relationshipLabel>
        <relationshipName>Laser_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Laser Case</label>
    <nameField>
        <displayFormat>LCS-{00000}</displayFormat>
        <label>Laser Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Laser Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>